<?xml version="1.0"?>
<package>

  <name>nav2d_comm</name>
  <version>0.3.0</version>
  <description>
    Communication directly to LIVA.
  </description>

  <maintainer email="rudycf2001@gmail.com">Rudy Wang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
